# QualModel

./: .hf-space-card.yml  Makefile  NEXT_STEPS.md  README.md  REPRODUCE.md  app.py  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy-hf-space.yml
docs/: evaluation_metrics.json
docs/fixtures/: evaluation_gold_fixture_subset.json
scripts/: compute_eval_metrics.py  push_hf_space.py  run_ablation.py
src/llm_survey/: cli.py  config.py  logging_config.py  rag_pipeline.py
src/llm_survey/eval/: __init__.py  ablation.py  cost.py  matching.py  runlog.py  stats.py
src/llm_survey/prompts/: model_extraction_prompts.py  registry.py
src/llm_survey/prompts/registry/v1.0/: base_extraction.md  extraction_system.md  model_refinement.md  rag_enhanced.md  thematic_analysis.md
tests/: test_config.py  test_eval_cost_runlog.py  test_eval_matching.py  test_eval_stats.py  test_prompt_registry.py
