[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-survey"
version = "0.1.0"
description = "LLM Survey Model Specification — research pipeline for extracting variable-and-relationship models from qualitative survey data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "LLM Survey Authors" }]
dependencies = [
    "openai==1.59.8",
    "instructor==1.7.2",
    "llama-index-core==0.12.8",
    "llama-index-vector-stores-chroma==0.4.1",
    "llama-index-embeddings-huggingface==0.5.0",
    "sentence-transformers==3.3.1",
    "chromadb==0.5.23",
    "diskcache==5.6.3",
    "nltk==3.9.1",
    "textblob==0.18.0.post0",
    "langdetect==1.0.9",
    "pdfplumber==0.11.4",
    "python-docx==1.1.2",
    "bertopic==0.16.4",
    "keybert==0.8.5",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "pyyaml==6.0.2",
    "pydantic==2.10.6",
    "pydantic-settings>=2.5,<3.0",
    "structlog>=24.1,<25.0",
    "streamlit==1.41.1",
    "plotly==5.24.1",
    "python-dotenv==1.0.1",
    "tqdm==4.67.1",
    "tiktoken==0.8.0",
    "pillow==10.4.0",
    "huggingface_hub==0.26.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "pip-tools>=7.4",
    "pip-audit>=2.7",
]

[project.scripts]
llm-survey = "llm_survey.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"llm_survey" = ["prompts/registry/**/*.md", "prompts/registry/**/*.yaml"]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["data", "outputs", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
# E501: line length is enforced by black, not ruff
# PLR0913/0912/0915/2004: complexity heuristics — opinionated, not worth fighting
# PLC0415: late imports inside functions are deliberate (cycle-breaking + lazy load)
# PLW0603: module-level `global` flag is the simplest idempotent-init pattern
# RUF002: docstrings contain Unicode like × intentionally
# RUF046: int(math.floor(x)) is more readable than the auto-fix proposes
ignore = [
    "E501",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "PLR2004",
    "PLC0415",
    "PLW0603",
    "RUF002",
    "RUF046",
]

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = false
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
markers = [
    "live_api: hits OpenRouter over the network; requires OPENROUTER_API_KEY",
]
